--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 6.5rem;
+    height: 14.5rem;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
   
     .wrap {
@@ -9,9 +9,12 @@
       margin: 0 auto;
   
       .logo {
-        width: 13.0rem;
+        width: 135px;
+        height: 135px;
+        background-size: 135px;
+        background-repeat: no-repeat;
         position: absolute;
-        top: 50%; left: 10px;
+        top: 50%; left: 20px;
         -webkit-transform: translateY(-50%);
         -moz-transform: translateY(-50%);
         transform: translateY(-50%);
